# illust_salmap

./: .gitignore  README.md  calc_mean_std.py  main.py  requirements.txt  setup.cfg  setup.py  test_dataloader.py  training.py
criterion/: DiceLoss.py
dataset/: __init__.py  cat2000.py  imp1k.py  salicon.py
downloader/: downloader.py  google_drive_downloader.py
evaluation_function/: eval.py
illust_salmap/dataset/: __init__.py  cat2000.py  imp1k.py  salicon.py  transforms.py
illust_salmap/downloader/: __init__.py  downloader.py  extract_handler.py  google_drive_downloader.py
illust_salmap/models/: deeplab.py  dummy_net.py  ez_bench.py  image_shape_adjuster.py  lraspp.py  multi_loss.py  pspnet.py  salency_gan_model.py  salgan_discriminator.py  salgan_generator.py  saliency_model.py  swin_sal.py  unet.py  unet_lite.py  unet_v2.py  unet_v3.py  upernet.py
illust_salmap/pipeline/: prediction_pipeline.py
illust_salmap/training/: discord_notify.py  load_ckpt.py  metrics.py  (+5 more)
ml_ops/: __init__.py  predict_service.py  train.py  trainer.py
models/: __init__.py  deeplab.py  dummy_net.py  image_shape_adjuster.py  pspnet.py  salency_gan_model.py  salgan_discriminator.py  salgan_generator.py  saliency_model.py  swin_sal.py  swin_unet.py  swinseg.py  unet.py  unet_lite.py  unet_v2.py  vgg.py  vq_vae.py
notebook/: salmap_pspnet.ipynb  salmap_unet.ipynb  training.ipynb  unet_lite.ipynb
tests/: unet_test.py
training/: __init__.py  builder.py  criterion.py  eval.py  gan_trainer.py  metrics.py  predict_service.py  train.py  trainer.py  utils.py
utils/: utils.py
(+6 files in other folders)
