[metadata]
name = illust_salmap
version = 1.0.0
description = A short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
author = Sumx21t
author_email = otoro180yen@gmail.com
url = https://github.com/NebusokuDev/illust_salmap.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    torch
    torchinfo
    torchvision
    matplotlib
    pytorch-lightning
    pillow
    numpy
    setuptools
    tqdm
    torchmetrics
    requests
    gdown
python_requires = >=3.6
